--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <nav class="navbar">
                 <div class="nav-container">
                     <a href="index.html" class="nav-logo">
-                        <i class="fas fa-volleyball-ball"></i>
-                        <span>DVA Club</span>
+                        <img src="images/logo/dva.png" alt="DVA Volleyball Club"
+                            class="logo-image">
+                        <span class="logo-text">DVA Club</span>
                     </a>
 
+                    <!-- Update navigation menu -->
                     <ul class="nav-menu" id="nav-menu">
                         <li class="nav-item">
                             <a href="index.html" class="nav-link">Home</a>
@@ -36,6 +38,13 @@
                         </li>
                         <li class="nav-item">
                             <a href="learn.html" class="nav-link">Learn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="requirements.html"
+                                class="nav-link">Requirements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
@@ -89,12 +98,11 @@
                         <div class="about-text">
                             <h3>Our History</h3>
                             <p>
-                                DVA Volleyball Club was founded in 2020 with the
-                                mission to develop
-                                volleyball in the community. We are committed to
-                                providing a professional
-                                training environment, helping athletes maximize
-                                their potential.
+                                DVA Volleyball Club was founded in 2022 with the
+                                mission to develop volleyball in the community.
+                                We are committed to providing a professional
+                                training environment,
+                                helping athletes maximize their potential.
                             </p>
 
                             <h3>Vision & Mission</h3>
@@ -112,7 +120,7 @@
 
                         <div class="about-stats">
                             <div class="stat-item fade-in">
-                                <h4>50+</h4>
+                                <h4>250+</h4>
                                 <p>Members</p>
                             </div>
                             <div class="stat-item fade-in">
@@ -120,12 +128,208 @@
                                 <p>Awards</p>
                             </div>
                             <div class="stat-item fade-in">
-                                <h4>5</h4>
+                                <h4>3</h4>
                                 <p>Years Active</p>
                             </div>
                             <div class="stat-item fade-in">
                                 <h4>3</h4>
                                 <p>Teams</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Club Info Section - NEW -->
+            <section class="club-info">
+                <div class="container">
+                    <div class="section-header">
+                        <h2>DVA Club Information</h2>
+                        <p>Everything you need to know about joining DVA
+                            Club</p>
+                    </div>
+
+                    <div class="club-info-content">
+                        <!-- Schedule Card -->
+                        <div class="info-card schedule-card fade-in">
+                            <div class="card-header">
+                                <div class="card-icon">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </div>
+                                <h3>Schedule</h3>
+                            </div>
+                            <div class="schedule-list">
+                                <div class="schedule-item">
+                                    <div class="day">Monday</div>
+                                    <div class="time">19:00 - 21:30</div>
+                                </div>
+                                <div class="schedule-item">
+                                    <div class="day">Wednesday</div>
+                                    <div class="time">19:00 - 21:30</div>
+                                </div>
+                                <div class="schedule-item">
+                                    <div class="day">Friday</div>
+                                    <div class="time">19:00 - 21:30</div>
+                                </div>
+                                <div class="schedule-item">
+                                    <div class="day">Saturday</div>
+                                    <div class="time">19:00 - 21:30</div>
+                                </div>
+                                <div class="schedule-item ">
+                                    <div class="day">Sunday</div>
+                                    <div class="time">08:00 - 10:30</div>
+                                </div>
+                            </div>
+                            <div class="schedule-note">
+                                <i class="fas fa-info-circle"></i>
+                                <span>Contact us early to book your
+                                    session</span>
+                            </div>
+                        </div>
+
+                        <!-- Team Structure Card -->
+                        <div class="info-card team-card fade-in">
+                            <div class="card-header">
+                                <div class="card-icon">
+                                    <i class="fas fa-users"></i>
+                                </div>
+                                <h3>Team Structure</h3>
+                            </div>
+                            <div class="team-info">
+                                <div class="team-detail">
+                                    <div class="detail-icon">
+                                        <i class="fas fa-layer-group"></i>
+                                    </div>
+                                    <div class="detail-content">
+                                        <h4>3 Teams per Session</h4>
+                                        <p>Each training session is divided into
+                                            3 competitive teams</p>
+                                    </div>
+                                </div>
+                                <div class="team-detail">
+                                    <div class="detail-icon">
+                                        <i class="fas fa-user-friends"></i>
+                                    </div>
+                                    <div class="detail-content">
+                                        <h4>7 Players per Team</h4>
+                                        <p>Including specialized Libero
+                                            position</p>
+                                    </div>
+                                </div>
+                                <div class="team-detail">
+                                    <div class="detail-icon">
+                                        <i class="fas fa-sync-alt"></i>
+                                    </div>
+                                    <div class="detail-content">
+                                        <h4>5-1 Rotation System</h4>
+                                        <p>Professional volleyball rotation
+                                            strategy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Facility & Equipment Cards -->
+                        <div class="facility-equipment">
+                            <!-- Indoor Court Card -->
+                            <div class="info-card facility-card fade-in">
+                                <div class="card-header">
+                                    <div class="card-icon">
+                                        <i class="fas fa-building"></i>
+                                    </div>
+                                    <h3>Facility</h3>
+                                </div>
+                                <div class="facility-content">
+                                    <div class="facility-image">
+                                        <img
+                                            src="images/others/indoor.jpg"
+                                            alt="Indoor Volleyball Court"
+                                            onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                        <div class="placeholder-image"
+                                            style="display: none;">
+                                            <i class="fas fa-building"></i>
+                                            <span>Indoor Court</span>
+                                        </div>
+                                    </div>
+                                    <div class="facility-info">
+                                        <h4>Indoor Volleyball Court</h4>
+                                        <p>Professional-grade indoor facility
+                                            with optimal lighting and
+                                            flooring</p>
+                                        <div class="facility-features">
+                                            <span class="feature-tag"><i
+                                                    class="fas fa-check"></i>Air
+                                                Conditioned</span>
+                                            <span class="feature-tag"><i
+                                                    class="fas fa-check"></i>Professional
+                                                Net</span>
+                                            <span class="feature-tag"><i
+                                                    class="fas fa-check"></i>Safety
+                                                Equipment</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Ball Type Card -->
+                            <div class="info-card equipment-card fade-in">
+                                <div class="card-header">
+                                    <div class="card-icon">
+                                        <i class="fas fa-volleyball-ball"></i>
+                                    </div>
+                                    <h3>Official Equipment</h3>
+                                </div>
+                                <div class="equipment-content">
+                                    <div class="equipment-image">
+                                        <img
+                                            src="images/others/mikasa.webp"
+                                            alt="Mikasa V200W Volleyball"
+                                            style="width: 40%; height: auto; margin: -20px auto 0; display: block;"
+                                            onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                        <div class="placeholder-image"
+                                            style="display: none;">
+                                            <i
+                                                class="fas fa-volleyball-ball"></i>
+                                            <span>Mikasa V200W</span>
+                                        </div>
+                                    </div>
+                                    <div class="equipment-info">
+                                        <h4>Mikasa V200W</h4>
+                                        <p>Official FIVB approved volleyball for
+                                            professional training and
+                                            competitions</p>
+                                        <div class="equipment-specs">
+                                            <div class="spec-item">
+                                                <i
+                                                    class="fas fa-certificate"></i>
+                                                <span>FIVB Approved</span>
+                                            </div>
+                                            <div class="spec-item">
+                                                <i class="fas fa-medal"></i>
+                                                <span>Competition Grade</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- CTA Section -->
+                    <div class="club-cta">
+                        <div class="cta-content">
+                            <h3>Ready to Join DVA Club?</h3>
+                            <p>Contact us today to reserve your spot in our
+                                training sessions</p>
+                            <div class="cta-buttons">
+                                <a href="contact.html" class="btn btn-primary">
+                                    <i class="fas fa-phone"></i>
+                                    Contact Us
+                                </a>
+                                <a href="learn.html" class="btn btn-secondary">
+                                    <i class="fas fa-info-circle"></i>
+                                    Learn More
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -192,7 +396,8 @@
                 <div class="footer-content">
                     <div class="footer-section">
                         <a href="index.html" class="footer-logo">
-                            <i class="fas fa-volleyball-ball"></i>
+                            <img src="images/logo/dva.png" alt="DVA Club"
+                                class="footer-logo-image">
                             <span>DVA Club</span>
                         </a>
                         <p>DVA Volleyball Club - Where talents are nurtured and
@@ -215,8 +420,8 @@
                             <li><i class="fas fa-phone"></i> 0768 299 329</li>
                             <li><i class="fas fa-envelope"></i>
                                 dvavolleyballclub@gmail.com</li>
-                            <li><i class="fas fa-map-marker-alt"></i>
-                                155 Trường Chinh - Thanh Xuân - Hà Nội</li>
+                            <li><i class="fas fa-map-marker-alt"></i> 155 Trường
+                                Chinh - Thanh Xuân - Hà Nội</li>
                         </ul>
                     </div>
                 </div>
