--- a/players.html
+++ b/players.html
@@ -20,10 +20,12 @@
             <nav class="navbar">
                 <div class="nav-container">
                     <a href="index.html" class="nav-logo">
-                        <i class="fas fa-volleyball-ball"></i>
-                        <span>DVA Club</span>
+                        <img src="images/logo/dva.png" alt="DVA Volleyball Club"
+                            class="logo-image">
+                        <span class="logo-text">DVA Club</span>
                     </a>
 
+                    <!-- Update navigation menu -->
                     <ul class="nav-menu" id="nav-menu">
                         <li class="nav-item">
                             <a href="index.html" class="nav-link">Home</a>
@@ -36,6 +38,13 @@
                         </li>
                         <li class="nav-item">
                             <a href="learn.html" class="nav-link">Learn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="requirements.html"
+                                class="nav-link">Requirements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
