--- a/index.html
+++ b/index.html
@@ -139,7 +139,192 @@
                     </div>
                 </div>
             </section>
+            <!-- Founder & Management Section - NEW -->
+            <section class="founder-management">
+                <div class="container">
+                    <div class="section-header">
+                        <h2>Founder & Management</h2>
+                    </div>
 
+                    <div class="founder-content">
+                        <div class="founder-card">
+                            <div class="founder-avatar-container">
+                                <div class="avatar-border-animation">
+                                    <div class="avatar-inner-border">
+                                        <img
+                                            src="images/others/DuyFou.png"
+                                            alt="Hoàng Quốc Duy - Founder"
+                                            class="founder-avatar"
+                                            onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                        <div class="avatar-placeholder"
+                                            style="display: none;">
+                                            <i class="fas fa-user-tie"></i>
+                                            <span>HQD</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="founder-title-badge">
+                                    <i class="fas fa-crown"></i>
+                                    <span>Founder</span>
+                                </div>
+                            </div>
+
+                            <div class="founder-info">
+                                <div class="founder-header">
+                                    <h3 class="founder-name">Hoàng Quốc Duy</h3>
+                                    <div class="founder-role">Founder &
+                                        Management</div>
+                                </div>
+
+                                <div class="founder-details">
+                                    <div class="detail-row">
+                                        <div class="detail-item">
+                                            <div class="detail-icon">
+                                                <i
+                                                    class="fas fa-map-marker-alt"></i>
+                                            </div>
+                                            <div class="detail-content">
+                                                <span
+                                                    class="detail-label">Hometown
+                                                </span>
+                                                <span class="detail-value">Thái
+                                                    Bình</span>
+                                            </div>
+                                        </div>
+                                        <div class="detail-item">
+                                            <div class="detail-icon">
+                                                <i
+                                                    class="fas fa-birthday-cake"></i>
+                                            </div>
+                                            <div class="detail-content">
+                                                <span class="detail-label">Born
+                                                </span>
+                                                <span
+                                                    class="detail-value">2003</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="detail-row">
+                                        <div class="detail-item">
+                                            <div class="detail-icon">
+                                                <i
+                                                    class="fas fa-volleyball-ball"></i>
+                                            </div>
+                                            <div class="detail-content">
+                                                <span
+                                                    class="detail-label">Position</span>
+                                                <span
+                                                    class="detail-value">Setter</span>
+                                            </div>
+                                        </div>
+                                        <div class="detail-item">
+                                            <div class="detail-icon">
+                                                <i
+                                                    class="fas fa-calendar-alt"></i>
+                                            </div>
+                                            <div class="detail-content">
+                                                <span
+                                                    class="detail-label">Founded</span>
+                                                <span
+                                                    class="detail-value">2022</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="founder-description">
+                                    <blockquote>
+                                        <i
+                                            class="fas fa-quote-left quote-icon"></i>
+                                        <p>"Volleyball is more than just a sport - it's about building character, fostering teamwork, and creating lasting friendships. When I founded DVA Club in 2022, my vision was to create a space where young athletes could develop not only their skills but also their passion for the game."</p>
+                                    </blockquote>
+
+                                </div>
+
+                                <div class="founder-achievements">
+                                    <h4>Key Achievements</h4>
+                                    <div class="achievements-grid">
+                                        <div class="achievement-item">
+                                            <div class="achievement-icon">
+                                                <i class="fas fa-users"></i>
+                                            </div>
+                                            <div class="achievement-content">
+                                                <span
+                                                    class="achievement-number">250+</span>
+                                                <span
+                                                    class="achievement-label">Members
+                                                    Trained</span>
+                                            </div>
+                                        </div>
+                                        <div class="achievement-item">
+                                            <div class="achievement-icon">
+                                                <i class="fas fa-trophy"></i>
+                                            </div>
+                                            <div class="achievement-content">
+                                                <span
+                                                    class="achievement-number">15+</span>
+                                                <span
+                                                    class="achievement-label">Championships
+                                                    Won</span>
+                                            </div>
+                                        </div>
+                                        <div class="achievement-item">
+                                            <div class="achievement-icon">
+                                                <i
+                                                    class="fas fa-calendar-check"></i>
+                                            </div>
+                                            <div class="achievement-content">
+                                                <span
+                                                    class="achievement-number">3</span>
+                                                <span
+                                                    class="achievement-label">Years
+                                                    of Excellence</span>
+                                            </div>
+                                        </div>
+                                        <div class="achievement-item">
+                                            <div class="achievement-icon">
+                                                <i class="fas fa-heart"></i>
+                                            </div>
+                                            <div class="achievement-content">
+                                                <span
+                                                    class="achievement-number">100%</span>
+                                                <span
+                                                    class="achievement-label">Passion
+                                                    & Dedication</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="founder-contact">
+                                    <h4>Connect with Founder</h4>
+                                    <div class="contact-buttons">
+                                        <a
+                                            href="https://www.facebook.com/duy.hoangquoc.1/"
+                                            target="_blank"
+                                            rel="noopener"
+                                            class="contact-btn facebook">
+                                            <i class="fab fa-facebook"></i>
+                                            <span>Facebook</span>
+                                        </a>
+                                        <a
+                                            href="mailto:quocduyhoang42@gmail.com"
+                                            class="contact-btn email">
+                                            <i class="fas fa-envelope"></i>
+                                            <span>Email</span>
+                                        </a>
+                                        <a href="tel:+84768299329"
+                                            class="contact-btn phone">
+                                            <i class="fas fa-phone"></i>
+                                            <span>Phone</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Club Info Section - NEW -->
             <section class="club-info">
                 <div class="container">
@@ -160,23 +345,25 @@
                             </div>
                             <div class="schedule-list">
                                 <div class="schedule-item">
-                                    <div class="day">Monday</div>
+                                    <div class="day">Monday (Level Middle)</div>
                                     <div class="time">19:00 - 21:30</div>
                                 </div>
                                 <div class="schedule-item">
-                                    <div class="day">Wednesday</div>
+                                    <div class="day">Wednesday (Level
+                                        Middle)</div>
                                     <div class="time">19:00 - 21:30</div>
                                 </div>
                                 <div class="schedule-item">
-                                    <div class="day">Friday</div>
+                                    <div class="day">Friday (Level Junior)</div>
                                     <div class="time">19:00 - 21:30</div>
                                 </div>
                                 <div class="schedule-item">
-                                    <div class="day">Saturday</div>
+                                    <div class="day">Saturday (Level
+                                        Middle)</div>
                                     <div class="time">19:00 - 21:30</div>
                                 </div>
                                 <div class="schedule-item ">
-                                    <div class="day">Sunday</div>
+                                    <div class="day">Sunday (Level Junior)</div>
                                     <div class="time">08:00 - 10:30</div>
                                 </div>
                             </div>
